--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -2,12 +2,12 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:elevation="20dp"
-    android:id="@+id/cardView"
-    android:transitionName="slide"
+    android:transitionName="imamge_small"
     app:cardBackgroundColor="@color/purple_500"
     app:cardCornerRadius="12dp">
 
@@ -15,15 +15,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:transitionName="image_small_">
 
         <androidx.constraintlayout.utils.widget.ImageFilterView
             android:layout_width="90dp"
             android:layout_height="90dp"
             android:background="@color/white_1"
-            android:scaleType="centerCrop"
-            android:focusable="true"
             android:clickable="true"
+            android:focusable="true"
+            android:scaleType="centerCrop"
             app:imageZoom="1"
             app:roundPercent="1"
             app:srcCompat="@mipmap/ic_launcher" />
