--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,20 @@
         <item name="boxBackgroundColor">@color/purple_500</item>
         <item name="hintTextColor">@color/purple_200</item>
     </style>
+
+    <style name="InfoUser">
+        <item name="android:letterSpacing">0.3</item>
+        <item name="android:shadowColor">@color/purple_500</item>
+        <item name="android:shadowDy">3</item>
+        <item name="android:shadowDx">-3</item>
+        <item name="android:shadowRadius">8</item>
+        <item name="android:padding">10dp</item>
+        <item name="textAllCaps">true</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold|italic</item>
+        <item name="android:textColor">@color/purple_700</item>
+    </style>
+
+
 </resources>
