--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -20,7 +20,7 @@
         android:textSize="50sp"
         android:textStyle="bold" />
 
-    <com.idax.openvision.Extra.CustomLinearLayout
+    <com.idax.openvision.Extra.CustomView.CustomLinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/purple_200"
@@ -28,7 +28,7 @@
         android:orientation="vertical"
         app:ratio="0.5">
 
-    </com.idax.openvision.Extra.CustomLinearLayout>
+    </com.idax.openvision.Extra.CustomView.CustomLinearLayout>
 -->
     <fragment
         android:id="@+id/googleMap"
