--- a/app/src/main/res/layout/custom_cell.xml
+++ b/app/src/main/res/layout/custom_cell.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:id="@+id/ll"
+    android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/customCellEditText"
@@ -11,4 +14,4 @@
         android:background="@drawable/custom_cell"
         android:inputType="numberSigned"
         tools:text="[i, j]" />
-</merge>
+</LinearLayout>
