--- a/app/src/main/res/layout/fragment_option_two.xml
+++ b/app/src/main/res/layout/fragment_option_two.xml
@@ -1,21 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_2"
+    android:orientation="vertical"
     tools:context=".Fragment.Option1.OptionOne">
 
-    <TextView
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chipGroup"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textColor="@color/purple_500_100"
-        android:gravity="center"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        android:fontFamily="cursive"
-        android:textColorLink="@color/black"
-        android:text="Option 2" />
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        app:chipSpacing="1dp">
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/allChip"
+            android:layout_width="wrap_content"
+            android:textIsSelectable="true"
+            android:layout_height="wrap_content"
+            style="@style/CustomChip"
+            android:text="All" />
+
+    </com.google.android.material.chip.ChipGroup>
 
 </LinearLayout>
